<resources>
    <string name="app_name">My places</string>
    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="notification_permissions">Notification Permissions</string>
    <string name="settings">Settings</string>
    <string name="map">View map</string>
    <string name="places">All my places</string>
    <string name="place">Place</string>
    <string name="place_descr">Place description</string>
    <string name="notification_message">Notification message</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>
    <string name="edit_notify_description">Notification</string>
    <string name="always">Always</string>
    <string name="once">Once</string>
    <string name="add_button">SAVE</string>
    <string name="remove_button">REMOVE</string>
    <string name="update_button">UPDATE</string>
    <string name="notification_header">Do not forget</string>
    <string name="notification_text_many">There is some interesting near you! Open app and check it out</string>
    <string name="appwidget_text">Nearest place</string>
    <string name="place_header">Place:</string>
    <string name="toast">Please set notification text</string>
    <string name="no_place_selected">No place selected</string>
    <string name="pressed_place">Pressed place </string>
    <string name="pressed_marker">Pressed marker: </string>
    <string name="lat">lat</string>
    <string name="lng">lng</string>
    <string name="notify_capstone">notify_capstone</string>
    <string name="fail_async">Failed to asynchronously load data.</string>
    <string name="removed_place">Removed place: </string>
    <string name="saved_place">Saved place: </string>
    <string name="exception">Exception: %s</string>
    <string name="error_code">Error code : %d</string>
    <string name="unknown_transition">"Unknown transition : %d</string>
    <string name="current_location_is_null">Current location is null. Using defaults.</string>
    <string name="channel">Channel human readable title</string>
</resources>
