<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <!--Place-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:src="@drawable/ic_globe_primary_24dp" />

                <TextView
                    android:id="@+id/placeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"
                    android:textSize="24dp" />
            </LinearLayout>
            <!--Text Notify-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:src="@drawable/comment_outline" />

                <EditText
                    android:id="@+id/editTextNotify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/edit_notify_description"
                    android:paddingBottom="@dimen/activity_horizontal_margin" />
            </LinearLayout>

            <!--Replace-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:visibility="visible">

                <!-- RadioGroup for visible selection of a priority -->
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/radButton1"
                        style="?android:attr/buttonBarNeutralButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/always"
                        android:textColor="@android:color/primary_text_dark" />


                    <RadioButton
                        android:id="@+id/radButton2"
                        style="?android:attr/buttonBarNeutralButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/once"
                        android:textColor="@android:color/primary_text_dark" />

                </RadioGroup>

            </FrameLayout>

            <!-- Add button -->
            <Button
                android:id="@+id/addButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/add_button"
                android:textColor="@android:color/primary_text_dark" />

            <!-- Remove button -->
            <Button
                android:id="@+id/removeButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/materialRed"
                android:text="@string/remove_button"
                android:textColor="@android:color/primary_text_dark"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
